[project]
name = "nonebot-adapter-qzone"
version = "0.1.0"
description = "Qzone adapter for NoneBot"
authors = [
    { name = "HeziCyan", email = "hezicyan@gmail.com" },
    { name = "GregTaoo", email = "gregtaoo@outlook.com" },
    { name = "itsevin", email = "itsevin@qq.com" },
    { name = "qzcsclub", email = "qzcsclub@outlook.com" },
]

readme = "README.md"
homepage = "https://github.com/qzqzcsclub/nonebot-adapter-qqzone"
repository = "https://github.com/qzqzcsclub/nonebot-adapter-qqzone"
documentation = "https://github.com/qzqzcsclub/nonebot-adapter-qqzone#readme"
keywords = ["bot", "nonebot", "qzone"]

requires-python = ">=3.8, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.0.1",
    "nonebot-adapter-console>=0.4.0",
    "requests>=2.31.0",
]

[tool.nonebot]
adapters = [
    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = []
plugin_dirs = []
builtin_plugins = ["echo"]

[tool.pdm.dev-dependencies]
lint = [
    "pylint>=2.17.5",
]

[tool.pylint]
ignore-long-lines = "\\s*(# )?<?https?://\\S+>?$"
