[project]
name = "nonebot-adapter-qzone"
version = "0.1.0"
description = "Qzone adapter for NoneBot"
authors = [
    { name = "HeziCyan", email = "hezicyan@gmail.com" },
    { name = "GregTaoo", email = "gregtaoo@outlook.com" },
    { name = "itsevin", email = "itsevin@qq.com" },
    { name = "qzcsclub", email = "qzcsclub@outlook.com" },
]
license = { text = "MIT" }

readme = "README.md"
# homepage = "https://github.com/qzqzcsclub/nonebot-adapter-qqzone"
# repository = "https://github.com/qzqzcsclub/nonebot-adapter-qqzone"
# documentation = "https://github.com/qzqzcsclub/nonebot-adapter-qqzone#readme"
keywords = ["bot", "nonebot", "qzone"]

requires-python = ">=3.8, <4.0"
dependencies = [
    "nonebot2>=2.1.1",
    "typing-extensions>=4.8.0",
]

[tool.pdm.dev-dependencies]
lint = [
    "pylint>=2.17.5",
]
test = [
    "nonebot-adapter-console>=0.4.0",
    "requests>=2.31.0",
]
nonebot = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "uvicorn>=0.23.2",
]

[tool.pylint]
ignore-long-lines = "\\s*(# )?<?https?://\\S+>?$"
